--- a/src/app/homepage.component.html
+++ b/src/app/homepage.component.html
@@ -1,66 +1,16 @@
 
-<!-- navigation -->
-<nav class="navbar navbar-default navbar-gradient navbar-fixed-top">
-  <div class="container">
-    <div class="navbar-header page-scroll">
-      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
-                        <span class="sr-only">Toggle navigation</span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                    </button>
-
-      <a class="navbar-brand page-scroll" href="#page-top">
-                        <img class="logo" src="../../assets/images/logo.png" alt="logo">
-                    </a>
-    </div>
-    <div class="collapse navbar-collapse navbar-ex1-collapse">
-      <ul class="nav navbar-nav">
-        <li>
-          <a class="page-scroll" href="#page-top">Home</a>
-        </li>
-        <li>
-          <a class="page-scroll" href="#about">About</a>
-        </li>
-        <li>
-          <a class="page-scroll" href="#features">Features</a>
-        </li>
-        <li>
-          <a class="page-scroll" href="#screenshots">Screenshots</a>
-        </li>
-        <li>
-          <a class="page-scroll" href="#pricing">Pricing</a>
-        </li>
-        <li>
-          <a class="page-scroll" href="#blog">Blog</a>
-        </li>
-        <li>
-          <a class="page-scroll" href="#contact">Contact</a>
-        </li>
-        <li class="dropdown">
-          <a href="blog-single-post-image.html">Pages</a>
-          <ul class="dropdown-menu" role="menu">
-            <li><a href="blog-grid-full-width.html">Blog</a></li>
-            <li><a href="404-interactive-bg.html">404</a></li>
-          </ul>
-        </li>
-      </ul>
-    </div>
-  </div>
-  <!-- /.container -->
-</nav>
-<!-- /.navigation -->
+<navbar></navbar>
 <!-- hero -->
 <section id="hero" class="hero-1">
   <div class="container">
     <div class="row">
       <div class="wrap-hero-content">
         <div class="hero-content">
-          <h1 class="os-animation" data-os-animation="zoomIn">
-            Skapp
+          <h1>
+            SIGL
           </h1>
           <p class="sub-title">
-            A stunning HTML template <span class="typed"></span>
+            La majeure dédiée au Système d'information et au Génie Logiciel
           </p>
         </div>
       </div>
@@ -70,56 +20,16 @@
   <!-- /.container -->
 </section>
 <!-- /.hero -->
-<!-- milestones -->
-<div class="milestones white-bg">
-  <div class="container">
-    <div class="row">
-      <div class="col-xs-12 col-md-4">
-        <div class="counter-box">
-          <span class="counter">
-                                9864
-                            </span>
-          <span class="counter-title">
-                                Download App
-                            </span>
-        </div>
-      </div>
-      <div class="col-xs-12 col-md-4">
-        <div class="counter-box">
-          <span class="counter">
-                                5871
-                            </span>
-          <span class="counter-title">
-                                Happy Clients
-                            </span>
-        </div>
-      </div>
-      <div class="col-xs-12 col-md-4">
-        <div class="counter-box">
-          <span class="counter">
-                                750
-                            </span>
-          <span class="counter-title">
-                                Working Hours
-                            </span>
-        </div>
-      </div>
-    </div>
-    <!-- /.row -->
-  </div>
-  <!-- /.container -->
-</div>
-<!-- /.milestones -->
 <!-- main-about -->
 <section id="about" class="white-bg">
   <div class="container">
     <div class="row">
       <div class="main-about">
         <div class="col-md-4 col-sm-4 col-xs-12 np">
-          <div class="img-left-01 os-animation" data-os-animation="fadeIn" data-os-animation-delay="0.2s">
+          <div class="img-left-01">
             <img src="../../assets/images/about/01.jpg" alt="about">
           </div>
-          <div class="img-left-02 os-animation" data-os-animation="fadeIn" data-os-animation-delay="0.4s">
+          <div class="img-left-02">
             <img src="../../assets/images/about/02.jpg" alt="about">
           </div>
         </div>
@@ -138,7 +48,7 @@
         </div>
         <!-- /.col -->
         <div class="col-md-4 col-sm-4 col-xs-12 np">
-          <div class="img-right os-animation" data-os-animation="fadeIn" data-os-animation-delay="0.6s">
+          <div class="img-right">
             <img src="../assets/images/about/03.jpg" alt="about">
           </div>
         </div>
@@ -157,7 +67,7 @@
     <div class="row features">
       <div class="features-content">
         <div class="col-md-6">
-          <div class="img-responsive mockup os-animation" data-os-animation="slideInUp">
+          <div class="img-responsive mockup">
             <img src="../assets/images/mockup/01.png" alt="mockup1" title="mockup1">
           </div>
         </div>
@@ -169,7 +79,7 @@
           <hr class="hr-title-03">
           <div class="box">
             <div class="col-sm-3 col-xs-12 np">
-              <div class="box-icon os-animation" data-os-animation="fadeInDown" data-os-animation-delay="0.2s">
+              <div class="box-icon">
                 <span class="fa fa-2x fa-comments-o gradient-text-02"></span>
               </div>
               <!-- /.box-icon -->
@@ -330,69 +240,83 @@
 <section id="pricing" class="pricing white-bg">
   <div class="container">
     <div class="row">
-      <div class="col-md-5 pricing-col">
+      <div class="col-md-12 pricing-col">
         <div class="section-title-01">
-          <div class="subtitle">Pricing</div>
-          <h2>Choose Your <span class="gradient-text">Plan</span></h2>
+          <h2>Les Modules <span class="gradient-text">SIGL</span></h2>
         </div>
         <hr class="hr-title-02">
         <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin vel commodo lectus. Donec eget sapien nec arcu gravida faucibus
-          vel sed dui. Proin sed mauris eros. Aliquam faucibus at magna vel aliquam. Vivamus lacinia diam tincidunt, luctus
-          nulla ac, tincidunt mi. Maecenas lobortis aliquet orci. Vestibulum mattis tellus lectus, id consequat urna lobortis
-          et. Ut lectus ligula, scelerisque nec efficitur a, maximus at nibh.
+          Afin de préparer au mieux les étudiants au monde de l'entreprise, la majeure SIGL s'articule autour de 4 modules majeurs apportant chacun
+          une partie de la culture et des connaissances requises pour construire les technologies de demain.
         </p>
-        <!-- nav-tabs -->
-        <ul id="nav-tabs" class="nav pricing-nav text-center" role="tablist">
-          <li role="presentation" class="active">
-            <a href="#normal" aria-controls="normal" role="tab" data-toggle="tab">
-                                    Monthly
-                                </a>
-          </li>
-          <li role="presentation" class="">
-            <a href="#extended" aria-controls="extended" role="tab" data-toggle="tab">
-                                    Yearly
-                                </a>
-          </li>
-        </ul>
-        <!-- /.nav-tabs -->
+
       </div>
       <!-- /.col -->
-      <div class="col-md-7" role="tabpanel">
+      <div class="col-md-12" role="tabpanel">
         <div id="tabs-collapse" class="tab-content">
           <div role="tabpanel" class="tab-pane fade in active" id="normal">
             <div class="tab-inner">
-              <div class="col-md-6 col-sm-6 col-xs12 np">
+              <div class="col-md-3 col-sm-3 col-xs12 np">
                 <div class="pricing-table">
                   <div class="pricing-table-header">
-                    <h3 class="heading">Standard</h3>
+                    <h3 class="heading">Mobilité et Applications</h3>
                   </div>
                   <p class="pricing-content">
-                    Maecenas at feugiat massa. Praesent non nunc augue. Donec condimentum nunc at dapibus tincidunt. Phasellus rhoncus urna ante,
-                    posuere dignissim metus volutpat.
+                    Découvrir et appréhender les nouveaux challenges du logiciel afin de s'intégrer dans des contraintes de mobilité
+                    toujours plus grandes, notamment via la technologie de l'IoT (Internet of Things)
                   </p>
                   <hr>
-                  <div class="price-value">$10</div>
                   <a href="#" class="dark-btn">
-                                                <span>Buy Now</span>
+                                                <span>Découvrir le module</span>
                                             </a>
                 </div>
                 <!-- /.pricing-table -->
               </div>
               <!-- /.col -->
-              <div class="col-md-6 col-sm-6 col-xs12 np">
+              <div class="col-md-3 col-sm-3 col-xs12 np">
                 <div class="pricing-table best">
                   <div class="pricing-table-header">
-                    <h3 class="heading gradient-text">Advanced</h3>
+                    <h3 class="heading gradient-text">Cloud et architecture</h3>
                   </div>
                   <p class="pricing-content">
-                    Maecenas at feugiat massa. Praesent non nunc augue. Donec condimentum nunc at dapibus tincidunt. Phasellus rhoncus urna ante,
-                    posuere dignissim metus volutpat.
+                    Comprendre le mode de construction et le fonctionnement des systèmes d'information ainsi que son architecture technique
+                    Découverte des technologies Cloud (Public, privé et hybride) et du Big Data.
                   </p>
                   <hr>
-                  <div class="price-value gradient-text">$80</div>
                   <a href="#" class="gradient-btn">
-                                                <span>Buy Now</span>
+                                                <span>Découvrir le module</span>
+                                            </a>
+                </div>
+                <!-- /.pricing-table -->
+              </div>
+
+              <div class="col-md-3 col-sm-3 col-xs12 np">
+                <div class="pricing-table">
+                  <div class="pricing-table-header">
+                    <h3 class="heading">Leadership et management</h3>
+                  </div>
+                  <p class="pricing-content">
+                    Maitriser les nouveaux modèles économiques afin de répondre aux nouveaux besoins de la gouvernance IT
+                  </p>
+                  <hr>
+                  <a href="#" class="dark-btn">
+                                                <span>Découvrir le module</span>
+                                            </a>
+                </div>
+                <!-- /.pricing-table -->
+              </div>
+
+              <div class="col-md-3 col-sm-3 col-xs12 np">
+                <div class="pricing-table best">
+                  <div class="pricing-table-header">
+                    <h3 class="heading gradient-text">Digitalisation et Transformation</h3>
+                  </div>
+                  <p class="pricing-content">
+                    Comprendre et et rendre viable la transformation digitale des entreprises ainsi que les nouveaux leviers d'innovation rendus possibles par l'IT
+                  </p>
+                  <hr>
+                  <a href="#" class="gradient-btn">
+                                                <span>Découvrir le module</span>
                                             </a>
                 </div>
                 <!-- /.pricing-table -->
