Add routing to navbar

--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,3 +1,4 @@
+<router-outlet></router-outlet>
 <nav class="navbar navbar-default navbar-gradient navbar-fixed-top">
   <div class="container">
     <div class="navbar-header page-scroll">
@@ -15,10 +16,10 @@
     <div class="collapse navbar-collapse navbar-ex1-collapse">
       <ul class="nav navbar-nav">
         <li>
-          <a class="page-scroll" href="#page-top">Home</a>
+          <a class="page-scroll" href="#page-top">Accueil</a>
         </li>
         <li>
-          <a class="page-scroll" href="#about">About</a>
+          <a class="page-scroll" href="#about">A propos</a>
         </li>
         <li>
           <a class="page-scroll" href="#features">Features</a>
@@ -27,7 +28,7 @@
           <a class="page-scroll" href="#screenshots">Screenshots</a>
         </li>
         <li>
-          <a class="page-scroll" href="#pricing">Pricing</a>
+          <a class="page-scroll" routerLink="/modules">Modules</a>
         </li>
         <li>
           <a class="page-scroll" href="#blog">Blog</a>
