Integration of Project page

--- a/src/app/homepage.component.html
+++ b/src/app/homepage.component.html
@@ -777,6 +777,102 @@
     </div>
   </div>
 </section>
+
+
+        <section id="features" class="features white-bg">
+            <div class="container">
+                <div class="row features">
+                    <div class="section-title">
+                        <h2>Projets</h2>
+                    </div>
+                    <hr class="hr-title-01 hr-icon">
+                    <div class="features-content">
+                        <div class="col-xs-12 col-md-4">
+                            <div class="box">
+                                <div class="box-icon os-animation" data-os-animation="fadeInDown" data-os-animation-delay="0.2s">
+                                    <span class="fa fa-2x fa-comments-o"></span>
+                                </div>
+                                <div class="info">
+                                    <h4 class="text-center">Cloud Hybride</h4>
+                                    <p>
+                                        Création d'un Cloud à la fois public et privé à l'aide d'Openstack et de services PaaS tel qu'AWS et Azure.
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-xs-12 col-md-4">
+                            <div class="box">
+                                <div class="box-icon os-animation" data-os-animation="fadeInDown" data-os-animation-delay="0.3s">
+                                    <span class="fa fa-2x fa-diamond"></span>
+                                </div>
+                                <div class="info">
+                                    <h4 class="text-center">VIRT</h4>
+                                    <p>
+                                        Réalisation de Business cases projets se basant sur des lignes de coûts et des leviers d’économies.
+
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-xs-12 col-md-4">
+                            <div class="box">
+                                <div class="box-icon os-animation" data-os-animation="fadeInDown" data-os-animation-delay="0.4s">
+                                    <span class="fa fa-2x fa-wrench"></span>
+                                </div>
+                                <div class="info">
+                                    <h4 class="text-center">IoT</h4>
+                                    <p>
+                                         Proposer un produit IoT puis le marketer (BCase, pub vidéo) jusqu'à la réalistion d'un Proof Of Concept
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-xs-12 col-md-4">
+                            <div class="box">
+                                <div class="box-icon os-animation" data-os-animation="fadeInDown" data-os-animation-delay="0.5s">
+                                    <span class="fa fa-2x fa-laptop"></span>
+                                </div>
+                                <div class="info">
+                                    <h4 class="text-center">PAE</h4>
+                                    <p>
+                                       Projet avec entreprise tout le long de l'année; <br/>
+                                       SIGL, RE, Société Général, KornFerry, GN...
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-xs-12 col-md-4">
+                            <div class="box">
+                                <div class="box-icon os-animation" data-os-animation="fadeInDown" data-os-animation-delay="0.6s">
+                                    <span class="fa fa-2x fa-magic"></span>
+                                </div>
+                                <div class="info">
+                                    <h4 class="text-center">URSI</h4>
+                                    <p>
+                                        Développement d'un SI  simulant le comportement d'une société de distibution tel que la Fnac et Darty.
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-xs-12 col-md-4">
+                            <div class="box">
+                                <div class="box-icon os-animation" data-os-animation="fadeInDown" data-os-animation-delay="0.7s">
+                                    <span class="fa fa-2x fa-heart"></span>
+                                </div>
+                                <div class="info">
+                                    <h4 class="text-center">Web Technologies</h4>
+                                    <p>
+                                        Deux projets avec des technologies modernes différentes au choix; ROR, Javascript, Golang...
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!-- /.row -->
+            </div>
+            <!-- /.container -->
+        </section>
 <!-- /.contact -->
 <!-- footer -->
 <footer class="footer">
