--- a/src/app/homepage.component.html
+++ b/src/app/homepage.component.html
@@ -789,8 +789,8 @@
                     <div class="features-content">
                         <div class="col-xs-12 col-md-4">
                             <div class="box">
-                                <div class="box-icon os-animation" data-os-animation="fadeInDown" data-os-animation-delay="0.2s">
-                                    <span class="fa fa-2x fa-comments-o"></span>
+                                <div style="margin: 20px;" data-os-animation="fadeInDown">
+                                    <span><img src="../assets/images/assetProject/cloud.jpg" width="70" height="70"/></span>
                                 </div>
                                 <div class="info">
                                     <h4 class="text-center">Cloud Hybride</h4>
@@ -802,8 +802,8 @@
                         </div>
                         <div class="col-xs-12 col-md-4">
                             <div class="box">
-                                <div class="box-icon os-animation" data-os-animation="fadeInDown" data-os-animation-delay="0.3s">
-                                    <span class="fa fa-2x fa-diamond"></span>
+                                <div style="margin: 20px;" data-os-animation="fadeInDown">
+                                    <span><img src="../assets/images/assetProject/bcase.jpg" width="70" height="70"/></span>
                                 </div>
                                 <div class="info">
                                     <h4 class="text-center">VIRT</h4>
@@ -816,8 +816,8 @@
                         </div>
                         <div class="col-xs-12 col-md-4">
                             <div class="box">
-                                <div class="box-icon os-animation" data-os-animation="fadeInDown" data-os-animation-delay="0.4s">
-                                    <span class="fa fa-2x fa-wrench"></span>
+                                <div style="margin: 20px;" data-os-animation="fadeInDown">
+                                    <span><img src="../assets/images/assetProject/iot.jpg" width="70" height="70"/></span>
                                 </div>
                                 <div class="info">
                                     <h4 class="text-center">IoT</h4>
@@ -829,8 +829,8 @@
                         </div>
                         <div class="col-xs-12 col-md-4">
                             <div class="box">
-                                <div class="box-icon os-animation" data-os-animation="fadeInDown" data-os-animation-delay="0.5s">
-                                    <span class="fa fa-2x fa-laptop"></span>
+                                <div style="margin: 20px;" data-os-animation="fadeInDown">
+                                    <span><img src="../assets/images/assetProject/pae.jpg" width="70" height="70"/></span>
                                 </div>
                                 <div class="info">
                                     <h4 class="text-center">PAE</h4>
@@ -843,8 +843,8 @@
                         </div>
                         <div class="col-xs-12 col-md-4">
                             <div class="box">
-                                <div class="box-icon os-animation" data-os-animation="fadeInDown" data-os-animation-delay="0.6s">
-                                    <span class="fa fa-2x fa-magic"></span>
+                                      <div style="margin: 20px;" data-os-animation="fadeInDown">
+                                    <span><img src="../assets/images/assetProject/ursi.jpg" width="70" height="70"/></span>
                                 </div>
                                 <div class="info">
                                     <h4 class="text-center">URSI</h4>
@@ -856,8 +856,8 @@
                         </div>
                         <div class="col-xs-12 col-md-4">
                             <div class="box">
-                                <div class="box-icon os-animation" data-os-animation="fadeInDown" data-os-animation-delay="0.7s">
-                                    <span class="fa fa-2x fa-heart"></span>
+                                <div style="margin: 20px;" data-os-animation="fadeInDown">
+                                    <span><img src="../assets/images/assetProject/www.jpg" width="70" height="70"/></span>
                                 </div>
                                 <div class="info">
                                     <h4 class="text-center">Web Technologies</h4>
