Update navbar to go directly to Testimony and Discipline's pages

--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -34,6 +34,15 @@
           <a class="page-scroll" href="#blog">Blog</a>
         </li>
         <li>
+          <a class="page-scroll" href="#review">Testimony</a>
+        </li>
+        <li>
+          <a class="page-scroll" href="#features">Projets</a>
+        </li>
+        <li>
+          <a class="page-scroll" href="#faq">Liste des matieres</a>
+        </li>
+        <li>
           <a class="page-scroll" href="#contact">Contact</a>
         </li>
         <li class="dropdown">
