Change About Title

--- a/src/app/homepage.component.html
+++ b/src/app/homepage.component.html
@@ -36,7 +36,7 @@
         <!-- /.col -->
         <div class="col-md-4 col-sm-4 col-xs-12">
           <div class="post-about negative-margin">
-            <h3 class="gradient-text">About Skapp</h3>
+            <h3 class="gradient-text">A Propos de SIGL</h3>
             <p>
               Nam et sagittis diam. Sed tempor augue sit amet egestas scelerisque. Orci varius natoque penatibus et magnis dis parturient
               montes, nascetur ridiculus mus. In ullamcorper molestie enim sed condimentum. Nulla lacinia sem et elit ornare,
@@ -61,182 +61,22 @@
   <!-- /.container -->
 </section>
 <!-- /.main-about -->
-<!-- features -->
-<section id="features" class="features white-bg">
-  <div class="container">
-    <div class="row features">
-      <div class="features-content">
-        <div class="col-md-6">
-          <div class="img-responsive mockup">
-            <img src="../assets/images/mockup/01.png" alt="mockup1" title="mockup1">
-          </div>
-        </div>
-        <div class="col-xs-12 col-md-6">
-          <div class="section-title-01">
-            <div class="subtitle">Features</div>
-            <h2>Awesome <span class="gradient-text-02">Features</span></h2>
-          </div>
-          <hr class="hr-title-03">
-          <div class="box">
-            <div class="col-sm-3 col-xs-12 np">
-              <div class="box-icon">
-                <span class="fa fa-2x fa-comments-o gradient-text-02"></span>
-              </div>
-              <!-- /.box-icon -->
-            </div>
-            <!-- /.col -->
-            <div class="col-sm-9 col-xs-12 np">
-              <div class="info">
-                <h4>Support 24/7</h4>
-                <p>
-                  Suspendisse potenti. Nunc mattis sapien nec mi dictum feugiat. Pellentesque vehicula consectetur commodo...
-                </p>
-              </div>
-              <!-- /.info -->
-            </div>
-            <!-- /.col -->
-          </div>
-          <!-- /.box -->
-          <div class="box">
-            <div class="col-sm-3 col-xs-12 np">
-              <div class="box-icon os-animation" data-os-animation="fadeInDown" data-os-animation-delay="0.2s">
-                <span class="fa fa-2x fa-diamond gradient-text-02"></span>
-              </div>
-              <!-- /.box-icon -->
-            </div>
-            <!-- /.col -->
-            <div class="col-sm-9 col-xs-12 np">
-              <div class="info">
-                <h4>Awesome Design</h4>
-                <p>
-                  Suspendisse potenti. Nunc mattis sapien nec mi dictum feugiat. Pellentesque vehicula consectetur commodo...
-                </p>
-              </div>
-              <!-- /.info -->
-            </div>
-            <!-- /.col -->
-          </div>
-          <!-- /.box -->
-          <div class="box">
-            <div class="col-sm-3 col-xs-12 np">
-              <div class="box-icon os-animation" data-os-animation="fadeInDown" data-os-animation-delay="0.2s">
-                <span class="fa fa-2x fa-wrench gradient-text-02"></span>
-              </div>
-              <!-- /.box-icon -->
-            </div>
-            <!-- /.col -->
-            <div class="col-sm-9 col-xs-12 np">
-              <div class="info">
-                <h4>Easy To Customize</h4>
-                <p>
-                  Suspendisse potenti. Nunc mattis sapien nec mi dictum feugiat. Pellentesque vehicula consectetur commodo...
-                </p>
-              </div>
-              <!-- /.info -->
-            </div>
-            <!-- /.col -->
-          </div>
-          <!-- /.box -->
-          <div class="box">
-            <div class="col-sm-3 col-xs-12 np">
-              <div class="box-icon os-animation" data-os-animation="fadeInDown" data-os-animation-delay="0.2s">
-                <span class="fa fa-2x fa-heart gradient-text-02"></span>
-              </div>
-              <!-- /.box-icon -->
-            </div>
-            <!-- /.col -->
-            <div class="col-sm-9 col-xs-12 np">
-              <div class="info">
-                <h4>Created With Love</h4>
-                <p>
-                  Suspendisse potenti. Nunc mattis sapien nec mi dictum feugiat. Pellentesque vehicula consectetur commodo...
-                </p>
-              </div>
-              <!-- /.info -->
-            </div>
-            <!-- /.col -->
-          </div>
-          <!-- /.box -->
-        </div>
-        <!-- /.col -->
-      </div>
-      <!-- /.features-content -->
-    </div>
-    <!-- /.row -->
-  </div>
-  <!-- /.container -->
-</section>
-<!-- /.features -->
+
 <!-- screenshots -->
 <section id="screenshots" class="screenshots grey-bg">
   <div class="container">
     <div class="section-title">
-      <div class="subtitle">Screens</div>
-      <h2>App <span class="gradient-text">Screenshots</span></h2>
+      <h2><span class="gradient-text">Photos</span></h2>
     </div>
     <hr class="hr-title">
-    <div class="screens-content">
-      <div class="screens owl-carousel">
-        <div class="item">
-          <div><img class="img-responsive" src="../assets/images/screenshots/01.jpg" alt="screenshot"></div>
-        </div>
-        <div class="item">
-          <div><img class="img-responsive" src="../assets/images/screenshots/02.jpg" alt="screenshot"></div>
-        </div>
-        <div class="item">
-          <div><img class="img-responsive" src="../assets/images/screenshots/03.jpg" alt="screenshot"></div>
-        </div>
-        <div class="item">
-          <div><img class="img-responsive" src="../assets/images/screenshots/04.jpg" alt="screenshot"></div>
-        </div>
-        <div class="item">
-          <div><img class="img-responsive" src="../assets/images/screenshots/05.jpg" alt="screenshot"></div>
-        </div>
-      </div>
-    </div>
-    <!-- /.screens-content -->
+
+
   </div>
   <!-- /.container -->
 </section>
 <!-- /.screenshots -->
-<!-- video -->
-<section id="video" class="video white-bg">
-  <div class="container">
-    <div class="row">
-      <div class="col-md-7 video-img">
-        <a href="#" class="play-button text-center" id="play-video" data-video="https://www.youtube.com/embed/nrJtHemSPW4?autoplay=1&amp;showinfo=0">
-                            <i class="fa fa-play"></i>
-                        </a>
-        <img class="img-responsive" src="../assets/images/video/03.png" alt="video" title="video">
-      </div>
-      <div class="col-md-5 video-col">
-        <div class="section-title-01">
-          <div class="subtitle">Video</div>
-          <h2>Discover Our <span class="gradient-text-02">App</span></h2>
-        </div>
-        <hr class="hr-title-03">
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin vel commodo lectus. Donec eget sapien nec arcu gravida faucibus
-          vel sed dui.
-        </p>
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin vel commodo lectus. Donec eget sapien nec arcu gravida faucibus
-          vel sed dui. Proin sed mauris eros. Aliquam faucibus at magna vel aliquam. Vivamus lacinia diam tincidunt, luctus
-          nulla ac, tincidunt mi. Maecenas lobortis aliquet orci.
-        </p>
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin vel commodo lectus. Donec eget sapien nec arcu gravida faucibus
-          vel sed dui. Proin sed mauris eros. Aliquam faucibus at magna vel aliquam...
-        </p>
-      </div>
-    </div>
-  </div>
-  <div class="work-video show-video">
-    <a href="#" class="close-video"></a>
-  </div>
-</section>
-<!-- /.video -->
-<!-- pricing -->
+
+<!-- modules -->
 <section id="pricing" class="pricing white-bg">
   <div class="container">
     <div class="row">
