Reorganize navbar in correct order

--- a/src/app/homepage.component.html
+++ b/src/app/homepage.component.html
@@ -106,7 +106,7 @@
                     toujours plus grandes, notamment via la technologie de l'IoT (Internet of Things)
                   </p>
                   <hr>
-                  <a href="#" class="dark-btn">
+                  <a href="#faq" class="page-scroll dark-btn">
                                                 <span>Découvrir le module</span>
                                             </a>
                 </div>
@@ -123,7 +123,7 @@
                     Découverte des technologies Cloud (Public, privé et hybride) et du Big Data.
                   </p>
                   <hr>
-                  <a href="#" class="gradient-btn">
+                  <a href="#faq" class="gradient-btn page-scroll">
                                                 <span>Découvrir le module</span>
                                             </a>
                 </div>
@@ -139,7 +139,7 @@
                     Maitriser les nouveaux modèles économiques afin de répondre aux nouveaux besoins de la gouvernance IT
                   </p>
                   <hr>
-                  <a href="#" class="dark-btn">
+                  <a href="#faq" class="dark-btn page-scroll">
                                                 <span>Découvrir le module</span>
                                             </a>
                 </div>
@@ -219,131 +219,6 @@
 </section>
 <!-- /.pricing -->
 <!-- review -->
-<section class="white-bg">
-  <div class="container-fluid">
-    <div class="row">
-      <div class="col-md-8 np text-center" role="tabpanel">
-        <div class="review bg-image-1">
-          <div class="wrap-review-content">
-            <div class="review-content">
-              <!-- nav-tabs -->
-              <ul class="nav review-nav" role="tablist">
-                <li role="presentation" class="">
-                  <a href="#phil" aria-controls="phil" role="tab" data-toggle="tab">
-                                                <img class="img-circle" src="../assets/images/review/01.jpg" alt="review" width="130">
-                                                <span class="quote"><i class="fa fa-quote-left"></i></span>
-                                            </a>
-                </li>
-                <li role="presentation" class="active">
-                  <a href="#jane" aria-controls="jane" role="tab" data-toggle="tab">
-                                                <img class="img-circle" src="../assets/images/review/02.jpg" alt="review" width="130">
-                                                <span class="quote"><i class="fa fa-quote-left"></i></span>
-                                            </a>
-                </li>
-                <li role="presentation" class="">
-                  <a href="#ben" aria-controls="ben" role="tab" data-toggle="tab">
-                                                <img class="img-circle" src="../assets/images/review/03.jpg" alt="review" width="130">
-                                                <span class="quote"><i class="fa fa-quote-left"></i></span>
-                                            </a>
-                </li>
-              </ul>
-              <!-- /.nav-tabs -->
-              <!-- tab-panel -->
-              <div class="tab-content">
-                <div role="tabpanel" class="tab-pane fade" id="phil">
-                  <div class="tab-inner">
-                    <div class="testimonial">
-                      <h3 class="testimonial-title">
-                        Phil
-                      </h3>
-                      <p><em class="text-capitalize"> UX designer</em> at <a href="#">Google</a></p>
-                      <p class="description">
-                        Maecenas at feugiat massa. Praesent non nunc augue. Donec condimentum nunc at dapibus tincidunt. Phasellus rhoncus urna ante,
-                        posuere dignissim metus volutpat quis. Maecenas quis nunc nunc. Nam quam eros, ultrices vel urna
-                        a, varius cursus diam. Aliquam vehicula nulla id erat lobortis scelerisque. Sed dignissim vestibulum
-                        magna vel tempus.
-                      </p>
-                    </div>
-                  </div>
-                </div>
-                <div role="tabpanel" class="tab-pane fade in active" id="jane">
-                  <div class="tab-inner">
-                    <div class="testimonial">
-                      <h3 class="testimonial-title">
-                        Jane
-                      </h3>
-                      <p><em class="text-capitalize"> Webdesigner</em> at <a href="#">Envato</a></p>
-                      <p class="description">
-                        Maecenas at feugiat massa. Praesent non nunc augue. Donec condimentum nunc at dapibus tincidunt. Phasellus rhoncus urna ante,
-                        posuere dignissim metus volutpat quis. Maecenas quis nunc nunc. Nam quam eros, ultrices vel urna
-                        a, varius cursus diam. Aliquam vehicula nulla id erat lobortis scelerisque. Sed dignissim vestibulum
-                        magna vel tempus.
-                      </p>
-                    </div>
-                  </div>
-                </div>
-                <div role="tabpanel" class="tab-pane fade" id="ben">
-                  <div class="tab-inner">
-                    <div class="testimonial">
-                      <h3 class="testimonial-title">
-                        Ben
-                      </h3>
-                      <p><em class="text-capitalize"> Manager</em> at <a href="#">Apple</a></p>
-                      <p class="description">
-                        Maecenas at feugiat massa. Praesent non nunc augue. Donec condimentum nunc at dapibus tincidunt. Phasellus rhoncus urna ante,
-                        posuere dignissim metus volutpat quis. Maecenas quis nunc nunc. Nam quam eros, ultrices vel urna
-                        a, varius cursus diam. Aliquam vehicula nulla id erat lobortis scelerisque. Sed dignissim vestibulum
-                        magna vel tempus.
-                      </p>
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <!-- /.tab-panel -->
-            </div>
-            <!-- /.review-content -->
-          </div>
-          <!-- /.wrap-review-content -->
-        </div>
-        <!-- /.review -->
-      </div>
-      <!-- /.col -->
-      <div class="col-md-4 np">
-        <div class="downloads-margin">
-          <div class="downloads bg-image-2">
-            <div class="wrap-downloads-content">
-              <div class="downloads-content text-center">
-                <h4 class="gradient-text-02">Get Skapp Now</h4>
-                <p>
-                  Maecenas quis nunc nunc. Nam quam eros, ultrices vel urna a, varius cursus diam. Aliquam vehicula nulla id erat lobortis
-                  scelerisque. Sed dignissim vestibulum magna vel tempus.
-                </p>
-                <div class="inline-block">
-                  <a href="#" class="store os-animation" data-os-animation="slideInUp">
-                                                <i class="fa fa-apple"></i>
-                                            </a>
-                  <a href="#" class="store space os-animation" data-os-animation="slideInUp" data-os-animation-delay="0.2s">
-                                                <i class="fa fa-android"></i>
-                                            </a>
-                  <a href="#" class="store space os-animation" data-os-animation="slideInUp" data-os-animation-delay="0.2s">
-                                                <i class="fa fa-windows"></i>
-                                            </a>
-                </div>
-              </div>
-              <!-- /.downloads-content -->
-            </div>
-            <!-- /.wrap-downloads-content -->
-          </div>
-          <!-- /.downloads -->
-        </div>
-        <!-- /.downloads-margin -->
-      </div>
-      <!-- /.col -->
-    </div>
-    <!-- /.row -->
-  </div>
-  <!-- /.container -->
-</section>
 <!-- /.reviews -->
 <!-- blog -->
 <section id="blog" class="blog white-bg">
@@ -516,107 +391,6 @@
   <!-- /.container -->
 </section>
 <!-- /.blog -->
-<!-- newsletter -->
-<section class="bottom-content white-bg">
-  <div class="container">
-    <div class="row">
-      <div class="section-title">
-        <div class="subtitle">Subscribe</div>
-        <h2>Join Our <span class="gradient-text">Newsletter</span></h2>
-      </div>
-      <hr class="hr-title">
-      <p class="text-center">Subscribe for our monthly newsletter to stay updated</p>
-      <div class="col-md-5">
-        <div class="newsletter">
-          <input type="text" class="form-control" placeholder="Your name">
-        </div>
-        <!-- /.newsletter-form -->
-      </div>
-      <!-- /.col -->
-      <div class="col-md-2 text-center">
-        <div class="newsletter os-animation" data-os-animation="bounceIn" data-os-animation-delay="0.2s">
-          <a href="#" class="subscribe-btn"><i class="fa fa-paper-plane"></i></a>
-        </div>
-      </div>
-      <!-- /.col -->
-      <div class="col-md-5">
-        <div class="newsletter">
-          <input type="text" class="form-control" placeholder="Your email">
-        </div>
-        <!-- /.newsletter-form -->
-      </div>
-      <!-- /.col -->
-    </div>
-    <!-- /.row -->
-  </div>
-  <!-- /.container -->
-</section>
-<!-- /.newsletter -->
-<!-- contact -->
-<section id="contact" class="white-bg">
-  <div class="container">
-    <div class="row">
-      <div class="contact">
-        <div class="col-md-4 os-animation" data-os-animation="fadeInUp" data-os-animation-delay="0.2s">
-          <div class="contact-box">
-            <div class="contact-icon">
-              <i class="fa fa-map-marker gradient-text-01"></i>
-            </div>
-            <!-- /.contact-icon -->
-            <div class="contact-content">
-              <h3 class="title">Address</h3>
-              <p class="description">
-                PO Box 16122, Collins Street West,
-                <br> Victoria 8007, Australia
-              </p>
-            </div>
-            <!-- /.contact-content -->
-          </div>
-          <!-- /.contact-box -->
-        </div>
-        <!-- /.col -->
-        <div class="col-md-4 os-animation" data-os-animation="fadeInUp" data-os-animation-delay="0.2s">
-          <div class="contact-box">
-            <div class="contact-icon">
-              <i class="fa fa-phone gradient-text-01"></i>
-            </div>
-            <!-- /.contact-icon -->
-            <div class="contact-content">
-              <h3 class="title">Phone</h3>
-              <p class="description">
-                <strong>O : </strong> 1-123-456-7890
-                <br>
-                <strong>F : </strong> 1-123-456-7890
-              </p>
-            </div>
-            <!-- /.contact-content -->
-          </div>
-          <!-- /.contact-box -->
-        </div>
-        <!-- /.col -->
-        <div class="col-md-4 os-animation" data-os-animation="fadeInUp" data-os-animation-delay="0.2s">
-          <div class="contact-box">
-            <div class="contact-icon">
-              <i class="fa fa-envelope gradient-text-01"></i>
-            </div>
-            <!-- /.contact-icon -->
-            <div class="contact-content">
-              <h3 class="title">Email</h3>
-              <p class="description">
-                contact@skapp.com
-                <br> admin@skapp.com
-              </p>
-            </div>
-            <!-- /.contact-content -->
-          </div>
-          <!-- /.contact-box -->
-        </div>
-        <!-- /.col -->
-      </div>
-      <!-- /.contact -->
-    </div>
-  </div>
-</section>
 
 
 <!-- Project page -->
@@ -935,7 +709,7 @@
                     <div class="col-md-6">
                         <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
                           <div class="section-title">
-                              <h3>Leadership et Management</h3>
+                              <h3>Mobilité et Applications</h3>
                           </div>
                             <div class="panel panel-default">
                                 <div class="panel-heading" role="tab" id="headingOne">
