--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -28,7 +28,7 @@
           <a class="page-scroll" href="#screenshots">Screenshots</a>
         </li>
         <li>
-          <a class="page-scroll" routerLink="/modules">Modules</a>
+          <a class="page-scroll" href="#pricing">Modules</a>
         </li>
         <li>
           <a class="page-scroll" href="#blog">Blog</a>
