Change Testimony redirection button with french Temoignage

--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -34,7 +34,7 @@
           <a class="page-scroll" href="#blog">Blog</a>
         </li>
         <li>
-          <a class="page-scroll" href="#review">Testimony</a>
+          <a class="page-scroll" href="#review">Témoignages</a>
         </li>
         <li>
           <a class="page-scroll" href="#features">Projets</a>
