Adding Nievetha video

--- a/src/app/homepage.component.html
+++ b/src/app/homepage.component.html
@@ -75,6 +75,10 @@
         <div class="section-title-01">
           <h2>Les Modules <span class="gradient-text">SIGL</span></h2>
         </div>
+        <section>
+<iframe height="600px" src="https://www.youtube.com/embed/F6WOmx52qBY?autoplay=1&amp;showinfo=0" allowfullscreen frameborder="0">
+</iframe>
+</section>
         <hr class="hr-title-02">
         <p>
           Afin de préparer au mieux les étudiants au monde de l'entreprise, la majeure SIGL s'articule autour de 4 modules majeurs apportant chacun
