Home page redirection fixed

--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -16,7 +16,7 @@
     <div class="collapse navbar-collapse navbar-ex1-collapse">
       <ul class="nav navbar-nav">
         <li>
-          <a class="page-scroll" href="#page-top">Accueil</a>
+          <a class="page-scroll" href="#hero">Accueil</a>
         </li>
         <li>
           <a class="page-scroll" href="#about">A propos</a>
