Remove user control and youtube's video proposition

--- a/src/app/homepage.component.html
+++ b/src/app/homepage.component.html
@@ -75,8 +75,9 @@
         <div class="section-title-01">
           <h2>Les Modules <span class="gradient-text">SIGL</span></h2>
         </div>
+        <br/>
         <section>
-<iframe height="600px" src="https://www.youtube.com/embed/F6WOmx52qBY?autoplay=1&amp;showinfo=0" allowfullscreen frameborder="0">
+<iframe height="600px" src="https://www.youtube.com/embed/F6WOmx52qBY?autoplay=1&amp;showinfo=0&controls=0&rel=0" allowfullscreen frameborder="0">
 </iframe>
 </section>
         <hr class="hr-title-02">
@@ -100,10 +101,8 @@
                     Découvrir et appréhender les nouveaux challenges du logiciel afin de s'intégrer dans des contraintes de mobilité
                     toujours plus grandes, notamment via la technologie de l'IoT (Internet of Things)
                   </p>
-                  <hr>
-                  <a href="#" class="dark-btn">
-                                                <span>Découvrir le module</span>
-                                            </a>
+                
+                  
                 </div>
                 <!-- /.pricing-table -->
               </div>
@@ -117,10 +116,8 @@
                     Comprendre le mode de construction et le fonctionnement des systèmes d'information ainsi que son architecture technique
                     Découverte des technologies Cloud (Public, privé et hybride) et du Big Data.
                   </p>
-                  <hr>
-                  <a href="#" class="gradient-btn">
-                                                <span>Découvrir le module</span>
-                                            </a>
+                
+           
                 </div>
                 <!-- /.pricing-table -->
               </div>
@@ -133,10 +130,8 @@
                   <p class="pricing-content">
                     Maitriser les nouveaux modèles économiques afin de répondre aux nouveaux besoins de la gouvernance IT
                   </p>
-                  <hr>
-                  <a href="#" class="dark-btn">
-                                                <span>Découvrir le module</span>
-                                            </a>
+                  
+               
                 </div>
                 <!-- /.pricing-table -->
               </div>
@@ -149,10 +144,7 @@
                   <p class="pricing-content">
                     Comprendre et et rendre viable la transformation digitale des entreprises ainsi que les nouveaux leviers d'innovation rendus possibles par l'IT
                   </p>
-                  <hr>
-                  <a href="#" class="gradient-btn">
-                                                <span>Découvrir le module</span>
-                                            </a>
+                  
                 </div>
                 <!-- /.pricing-table -->
               </div>
