--- a/src/app/homepage.component.html
+++ b/src/app/homepage.component.html
@@ -77,7 +77,7 @@
         </div>
         <br/>
         <section>
-<iframe height="600px" src="https://www.youtube.com/embed/F6WOmx52qBY?autoplay=1&amp;showinfo=0&controls=0&rel=0" allowfullscreen frameborder="0">
+<iframe height="600px" src="https://www.youtube.com/embed/F6WOmx52qBY?showinfo=0&controls=0&rel=0" allowfullscreen frameborder="0">
 </iframe>
 </section>
         <hr class="hr-title-02">
