--- a/src/app/homepage.component.html
+++ b/src/app/homepage.component.html
@@ -31,10 +31,10 @@
       <div class="main-about">
         <div class="col-md-4 col-sm-4 col-xs-12 np">
           <div class="img-left-01">
-            <img src="../../assets/images/about/01.jpg" alt="about">
+            <img src="../assets/images/about/01.jpg" alt="about">
           </div>
           <div class="img-left-02">
-            <img src="../../assets/images/about/02.jpg" alt="about">
+            <img src="../assets/images/about/02.jpg" alt="about">
           </div>
         </div>
         <!-- /.col -->
@@ -1050,19 +1050,19 @@
                                 <ul class="nav review-nav" id="nav-tabs" role="tablist">
                                     <li role="presentation" class="">
                                         <a href="#phil" aria-controls="phil" role="tab" data-toggle="tab">
-                                            <img class="img-circle" src="assets/images/review/01.jpg" alt="review" width="130">
+                                            <img class="img-circle" src="../assets/images/review/01.jpg" alt="review" width="130">
                                             <span class="quote"><i class="fa fa-quote-left"></i></span>
                                         </a>
                                     </li>
                                     <li role="presentation" class="active">
                                         <a href="#jane" aria-controls="jane" role="tab" data-toggle="tab">
-                                            <img class="img-circle" src="assets/images/review/02.jpg" alt="review" width="130">
+                                            <img class="img-circle" src="../assets/images/review/02.jpg" alt="review" width="130">
                                             <span class="quote"><i class="fa fa-quote-left"></i></span>
                                         </a>
                                     </li>
                                     <li role="presentation" class="">
                                         <a href="#ben" aria-controls="ben" role="tab" data-toggle="tab">
-                                            <img class="img-circle" src="assets/images/review/03.jpg" alt="review" width="130">
+                                            <img class="img-circle" src="../assets/images/review/03.jpg" alt="review" width="130">
                                             <span class="quote"><i class="fa fa-quote-left"></i></span>
                                         </a>
                                     </li>
@@ -1148,12 +1148,12 @@
 <!-- /.footer -->
 
 <!-- scripts -->
-<script src="../../assets/js/core/jquery-3.1.1.min.js"></script>
-        <script src="../../assets/js/core/bootstrap.min.js"></script>
-        <script src="../../assets/js/core/jquery.easing.min.js"></script>
-        <script src="../../assets/js/plugins/waypoints/jquery.waypoints.min.js"></script>
-        <script src="../../assets/js/plugins/typed/typed.min.js"></script>
-        <script src="../../assets/js/plugins/owl-carousel/owl.carousel.min.js"></script>
+<script src="../assets/js/core/jquery-3.1.1.min.js"></script>
+        <script src="../assets/js/core/bootstrap.min.js"></script>
+        <script src="../assets/js/core/jquery.easing.min.js"></script>
+        <script src="../assets/js/plugins/waypoints/jquery.waypoints.min.js"></script>
+        <script src="../assets/js/plugins/typed/typed.min.js"></script>
+        <script src="../assets/js/plugins/owl-carousel/owl.carousel.min.js"></script>
         <script type="text/javascript">
             $(function(){
                 $('.slide-out-div').tabSlideOut({
@@ -1167,7 +1167,7 @@
                 });
             });
         </script>
-        <script src="../../assets/js/core/main.js"></script>
-        <script src="../../assets/js/core/demo.switcher.min.js"></script>
-        <script src="../../assets/js/pages/homepage-01.js"></script>
+        <script src="../assets/js/core/main.js"></script>
+        <script src="../assets/js/core/demo.switcher.min.js"></script>
+        <script src="../assets/js/pages/homepage-01.js"></script>
         
