--- a/src/app/homepage.component.html
+++ b/src/app/homepage.component.html
@@ -31,10 +31,10 @@
       <div class="main-about">
         <div class="col-md-4 col-sm-4 col-xs-12 np">
           <div class="img-left-01">
-            <img src="../assets/images/about/01.jpg" alt="about">
+            <img src="./assets/images/about/01.jpg" alt="about">
           </div>
           <div class="img-left-02">
-            <img src="../assets/images/about/02.jpg" alt="about">
+            <img src="./assets/images/about/02.jpg" alt="about">
           </div>
         </div>
         <!-- /.col -->
@@ -53,7 +53,7 @@
         <!-- /.col -->
         <div class="col-md-4 col-sm-4 col-xs-12 np">
           <div class="img-right">
-            <img src="../assets/images/about/03.jpg" alt="about">
+            <img src="./assets/images/about/03.jpg" alt="about">
           </div>
         </div>
         <!-- /.col -->
@@ -225,7 +225,7 @@
       <div class="col-md-7 mb-30">
         <article class="card">
           <header class="card-thumb">
-            <img src="../assets/images/blog/03.jpg" alt="blog">
+            <img src="./assets/images/blog/03.jpg" alt="blog">
           </header>
           <!-- /.header -->
           <div class="card-date">
@@ -256,7 +256,7 @@
       <div class="col-md-5 mb-30">
         <article class="card">
           <header class="card-thumb">
-            <img src="../assets/images/blog/05.jpg" alt="blog">
+            <img src="./assets/images/blog/05.jpg" alt="blog">
           </header>
           <!-- /.header -->
           <div class="card-date">
@@ -288,7 +288,7 @@
       <div class="col-md-4 mb-30">
         <article class="card">
           <header class="card-thumb">
-            <img src="../assets/images/blog/01.jpg" alt="blog">
+            <img src="./assets/images/blog/01.jpg" alt="blog">
           </header>
           <!-- /.header -->
           <div class="card-date">
