--- a/src/app/homepage.component.html
+++ b/src/app/homepage.component.html
@@ -319,7 +319,7 @@
       <div class="col-md-4 mb-30">
         <article class="card">
           <header class="card-thumb">
-            <img src="../assets/images/blog/02.jpg" alt="blog">
+            <img src="./assets/images/blog/02.jpg" alt="blog">
           </header>
           <!-- /.header -->
           <div class="card-date">
@@ -350,7 +350,7 @@
       <div class="col-md-4 mb-30">
         <article class="card">
           <header class="card-thumb">
-            <img src="../assets/images/blog/03.jpg" alt="blog">
+            <img src="./assets/images/blog/03.jpg" alt="blog">
           </header>
           <!-- /.header -->
           <div class="card-date">
@@ -398,7 +398,7 @@
                         <div class="col-xs-12 col-md-4">
                             <div class="box">
                                 <div style="margin: 20px;" data-os-animation="fadeInDown">
-                                    <span><img src="../assets/images/assetProject/cloud.jpg" width="70" height="70"/></span>
+                                    <span><img src="./assets/images/assetProject/cloud.jpg" width="70" height="70"/></span>
                                 </div>
                                 <div class="info">
                                     <h4 class="text-center">Cloud Hybride</h4>
@@ -411,7 +411,7 @@
                         <div class="col-xs-12 col-md-4">
                             <div class="box">
                                 <div style="margin: 20px;" data-os-animation="fadeInDown">
-                                    <span><img src="../assets/images/assetProject/bcase.jpg" width="70" height="70"/></span>
+                                    <span><img src="./assets/images/assetProject/bcase.jpg" width="70" height="70"/></span>
                                 </div>
                                 <div class="info">
                                     <h4 class="text-center">VIRT</h4>
@@ -425,7 +425,7 @@
                         <div class="col-xs-12 col-md-4">
                             <div class="box">
                                 <div style="margin: 20px;" data-os-animation="fadeInDown">
-                                    <span><img src="../assets/images/assetProject/iot.jpg" width="70" height="70"/></span>
+                                    <span><img src="./assets/images/assetProject/iot.jpg" width="70" height="70"/></span>
                                 </div>
                                 <div class="info">
                                     <h4 class="text-center">IoT</h4>
@@ -438,7 +438,7 @@
                         <div class="col-xs-12 col-md-4">
                             <div class="box">
                                 <div style="margin: 20px;" data-os-animation="fadeInDown">
-                                    <span><img src="../assets/images/assetProject/pae.jpg" width="70" height="70"/></span>
+                                    <span><img src="./assets/images/assetProject/pae.jpg" width="70" height="70"/></span>
                                 </div>
                                 <div class="info">
                                     <h4 class="text-center">PAE</h4>
@@ -452,7 +452,7 @@
                         <div class="col-xs-12 col-md-4">
                             <div class="box">
                                       <div style="margin: 20px;" data-os-animation="fadeInDown">
-                                    <span><img src="../assets/images/assetProject/ursi.jpg" width="70" height="70"/></span>
+                                    <span><img src="./assets/images/assetProject/ursi.jpg" width="70" height="70"/></span>
                                 </div>
                                 <div class="info">
                                     <h4 class="text-center">URSI</h4>
@@ -465,7 +465,7 @@
                         <div class="col-xs-12 col-md-4">
                             <div class="box">
                                 <div style="margin: 20px;" data-os-animation="fadeInDown">
-                                    <span><img src="../assets/images/assetProject/www.jpg" width="70" height="70"/></span>
+                                    <span><img src="./assets/images/assetProject/www.jpg" width="70" height="70"/></span>
                                 </div>
                                 <div class="info">
                                     <h4 class="text-center">Web Technologies</h4>
@@ -1050,19 +1050,19 @@
                                 <ul class="nav review-nav" id="nav-tabs" role="tablist">
                                     <li role="presentation" class="">
                                         <a href="#phil" aria-controls="phil" role="tab" data-toggle="tab">
-                                            <img class="img-circle" src="../assets/images/review/01.jpg" alt="review" width="130">
+                                            <img class="img-circle" src="./assets/images/review/01.jpg" alt="review" width="130">
                                             <span class="quote"><i class="fa fa-quote-left"></i></span>
                                         </a>
                                     </li>
                                     <li role="presentation" class="active">
                                         <a href="#jane" aria-controls="jane" role="tab" data-toggle="tab">
-                                            <img class="img-circle" src="../assets/images/review/02.jpg" alt="review" width="130">
+                                            <img class="img-circle" src="./assets/images/review/02.jpg" alt="review" width="130">
                                             <span class="quote"><i class="fa fa-quote-left"></i></span>
                                         </a>
                                     </li>
                                     <li role="presentation" class="">
                                         <a href="#ben" aria-controls="ben" role="tab" data-toggle="tab">
-                                            <img class="img-circle" src="../assets/images/review/03.jpg" alt="review" width="130">
+                                            <img class="img-circle" src="./assets/images/review/03.jpg" alt="review" width="130">
                                             <span class="quote"><i class="fa fa-quote-left"></i></span>
                                         </a>
                                     </li>
@@ -1091,7 +1091,7 @@
         <div class="appstore">
           <div class="col-sm-3 col-xs-12 np">
             <div class="appstore-icon os-animation" data-os-animation="bounceIn" data-os-animation-delay="0.2s">
-              <img class="logo" src="../assets/images/logo-2.png" alt="logo">
+              <img class="logo" src="./assets/images/logo-2.png" alt="logo">
             </div>
             <!-- /.box-icon -->
           </div>
