add social network redirection (footer)

--- a/src/app/homepage.component.html
+++ b/src/app/homepage.component.html
@@ -1108,18 +1108,18 @@
       <!-- /.col -->
       <div class="col-md-6">
         <ul class="social-network">
-          <li><a href="#" class="ico-facebook" title="Facebook">
+          <li><a href="https://www.facebook.com/SIGL.EPITA/" class="ico-facebook" title="Facebook">
                                 <i class="fa fa-facebook"></i></a>
           </li>
-          <li><a href="#" class="ico-twitter" title="Twitter">
+          <li><a href="https://twitter.com/sigl_epita?lang=fr" class="ico-twitter" title="Twitter">
                                 <i class="fa fa-twitter"></i></a>
           </li>
-          <li><a href="https://www.behance.net/Saerox" class="ico-behance" title="Behance">
+         <!-- <li><a href="https://www.behance.net/Saerox" class="ico-behance" title="Behance">
                                 <i class="fa fa-behance"></i></a>
           </li>
           <li><a href="http://dsaerox.deviantart.com/" class="ico-deviantart" title="Deviantart">
                                 <i class="fa fa-deviantart"></i></a>
-          </li>
+          </li>-->
         </ul>
       </div>
       <!-- /.col -->
